@@ -11,10 +11,9 @@ import com.ibm.research.drl.dpt.providers.ProviderType;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 public class MaritalStatusIdentifier extends AbstractManagerBasedIdentifier {
-    private final Collection<String> appropriateNames = List.of("Marital Status");
+    private Collection<String> appropriateNames = Arrays.asList("Marital Status");
     private final MaritalStatusManager maritalStatusManager = MaritalStatusManager.getInstance();
 
     @Override
